Current Version: @@VERSION@@

ctags-5.3.2 (Thu Sep 26 2002)
* Improved ability for tagsOpen() in readtags library to report failure to
  open tag file, adding new fields to tagFileInfo structure.
* Added '$' a valid character for C identifier [VMS].
* Fixed problem terminating Perl POD block [Perl, Bug #612019].

ctags-5.3.1 (Thu Sep 12 2002)
* Renamed tagsSetSorted() to tagsSetSortType() and "sorted" member of
  tagFileInfo structure of readtags library to "sort".
* Added new function, tagsFirst() to readtags library.
* Fixed incorrect tag kinds [Verilog].
* Fixed null tags for unnamed BLOCK DATA statements [Fortran].
* Fixed missing tags for function preceded by "<SID>" [Vim].
* Fixed missing tags for equate statements not in column 1 [Asm, Bug #538629].
* Fixed Ruby parser (why didn't the compiler report my screw-up?) [Ruby].

ctags-5.3 (Wed Jul 17 2002)
* Allowed --etags-include option without input files.
* Changed Asm parser to back to C-based parser to remove redundant tags,
  and extending its support for more variants [Asm].
* Changed to using _tempnam() to create temporary files on Windows, allowing
  "TMP" environment variable to set temporary directory.
* Changed the -x output to match that of traditional ctags when the --format=1
  option is supplied. The new format was also changed slightly to conform more
  closely to the original format, with the addition of the extra tag type field.
* Added support for Verilog language, submitted by Nam SungHyun.
* Added support for RISC OS platform, contributed by Andrew Wingate.
* Added support for "#pragma weak", generating macro tags for weak symbols [C].
* Added support for mixins and class methods to Ruby parser, submitted by
  Matthias Veit [Ruby].
* Added support to ctags and readtags library for case-folded sorting of tag
  files, submitted by Flemming Madsen.
* Added identification of class methods [Python].
* Fixed portability problems [Bugs #541997, #571240].